--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
             <button class="close-modal" onclick="closeDashboardModal()">&times;</button>
             
             <div class="modal-header">
-                <!-- Updated modal header to show full dashboard image without cropping -->
-                <img src="/images/deshboardprontovvpdf-page-0001.jpg" alt="Dashboard Vendas Completo" class="modal-dashboard-image">
+                <!-- Fixed image path to use relative path without leading slash -->
+                <img src="images/deshboardprontovvpdf-page-0001.jpg" alt="Dashboard Vendas Completo" class="modal-dashboard-image">
             </div>
 
             <div class="modal-body">
