--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             </button>
         </div>
         <div class="hero-socials">
-            <a href="https://linkedin.com/in/derick-antonio" target="_blank" class="social-icon linkedin" title="LinkedIn">
+            <!-- Updated LinkedIn URL to user's profile -->
+            <a href="https://www.linkedin.com/in/derick-antonio-4b761133a/" target="_blank" class="social-icon linkedin" title="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="https://github.com/HossN5" target="_blank" class="social-icon github" title="GitHub">
@@ -149,7 +150,8 @@
             <p class="section-description">Conecte-se comigo em minhas redes profissionais</p>
             
             <div class="contact-options">
-                <a href="https://linkedin.com/in/derick-antonio" target="_blank" class="contact-card linkedin">
+                <!-- Updated LinkedIn URL in contact section -->
+                <a href="https://www.linkedin.com/in/derick-antonio-4b761133a/" target="_blank" class="contact-card linkedin">
                     <i class="fab fa-linkedin-in"></i>
                     <h3>LinkedIn</h3>
                     <p>Veja meu perfil profissional</p>
@@ -173,7 +175,8 @@
         <div class="container">
             <p>&copy; 2025 Derick Antônio. Todos os direitos reservados.</p>
             <div class="footer-socials">
-                <a href="https://linkedin.com/in/derick-antonio" target="_blank" class="footer-social">
+                <!-- Updated LinkedIn URL in footer -->
+                <a href="https://www.linkedin.com/in/derick-antonio-4b761133a/" target="_blank" class="footer-social">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://github.com/HossN5" target="_blank" class="footer-social">
